src/objects/CF_Application_Level_Access__c 2.object
<CustomObject>
    <description>Will link all related permission sets, groups, queues or other mechanisms that support the setup of a specific application/level combination.</description>
    <label>Application Level Access</label>
    <nameField>
        <label>Application Level Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Level Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Access_API_Name__c</fullName>
        <label>Access API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Label_Name__c</fullName>
        <label>Access Label Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Groups</fullName>
                    <default>true</default>
                    <label>Groups</label>
                </value>
                <value>
                    <fullName>Permission Sets</fullName>
                </value>
                <value>
                    <fullName>Queues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTC_Application_Level__c</fullName>
        <label>DTC Application Level</label>
        <referenceTo>DTC_Application_Level__c</referenceTo>
        <relationshipLabel>Application Level Access</relationshipLabel>
        <relationshipName>Application_Level_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>